source/styles/content.scss
@import "compass";

@mixin contentColumnWidth($num, $grid, $gutter) {
    width: (100 / $grid) * $num * 1%;
    box-sizing: border-box;
    padding: 0 ($gutter/2);
    float: left;

    .content-editor & {
        min-height: 20px;
        cursor: pointer;
        
        outline: 1px solid rgba(135, 206, 250, 0);
        transition: 0.2s background 0s, 0.4s outline 0s;

        &:hover {
            outline: 1px solid rgba(135, 206, 250, 0.6);
            background: rgba(135, 206, 250, 0.1);
        }

        &.active {
            outline: 2px solid lightskyblue;
            background: rgba(135, 206, 250, 0.2);
        }

    }
}

.content {
    $gutter: 30px;
    $grid: 24;

    .r {
        margin-left: $gutter / -2;
        margin-right: $gutter / -2;
        // padding-bottom: 18px;
        @include clearfix();

        .content-editor & {
            position: relative;
            // brower paint optimization hack            
            transform: translateZ(0);

            .row-actions {
                position: absolute;
                top: 38px;
                right: 0;
            }
        }
    }

    @for $i from 1 through $grid {
        .c#{$i} {
            @include contentColumnWidth($i, $grid, $gutter);
        }
    }

    img {
        max-width: 100%;
    }

    .content-editor & {
        .spoiler-content {
            background: #eee;
            padding: 19px 9px 9px;
        }
    }
}

// Spoilers
.spoiler {
    margin-top: 12px;

    > a {
        @include inline-block;

        margin: 0 0 12px 0;
        padding: 4px 5px;

        background: #EEE;

        .caret {
            margin: 0 9px 0 7px;
        }
    }
}

.spoiler-content {
    display: none;
}

// Typography

.r {

    h2,
    h3,
    h4 {
        font-weight: 600;

        strong {
            font-weight: 600;
        }
    }

    h4 {
        font-size: 18px;
        margin-top: 20px;
    }

    h3 {
        font-size: 22px;
    }

    h2 {
        font-size: 26px;
    }
}

